--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,19 +1,26 @@
-* {
-  box-sizing: border-box;
-}
 
 .nava {
-  background-color: #007075;
+  background-color: #f75d34;
   margin: 0;
   padding: 10px;
 }
 .nav-header {
+  font-size: 20px;
   color: white;
-  font-size: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 5px;
+}
+.nav-item {
+  font-size: 15px;
+  color: white;
+  align-items: center;
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+  cursor: pointer;
+}
+.nav-item-list {
+  display: flex;
+  justify-content: end;
 }
 .img-container img {
   width: 100%;
@@ -38,43 +45,55 @@
 .input-search {
   font-size: 20px;
   padding: 5px;
-  border-radius: 20px;
+  border-radius: 5px;
   border: none;
   outline: none;
   width: 500px;
   height: 50px;
 }
-h1{
-  font-size: 40px;  
+h1 {
+  font-size: 40px;
   font-weight: 600;
-
 }
-.text-1{
+.text-1 {
   padding-top: 60px;
 }
-.button{
-    padding: 10px;
-    border: none;
-    outline: none;
-    border-radius: 10px;
-    background-color: #007075;
+.button {
+  padding: 15px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  background-color: #f75d34;
+  color: white;
+  font-weight: 600;
+  margin: 15px;
 }
-.box{   
-    margin: 10px;
-    border: 1px solid grey;
-    padding: 20px 0px 20px 0px;
-    height: 300px;
-    border-radius: 10px;
-    margin: 20px;
-    background-color: #f5f8f9;
-    box-shadow: 0px 0px 2px 4px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-
+.button-2 {
+  position: absolute;
+  top: 65%;
+  right: 30%;
+  border-radius: 10px;
+  background-color: #f75d34;
+  color: white;
+  font-weight: 600;
+  margin: 10px;
+  padding: 15px;
 }
-.box-head{  
-      font-weight: 700;
-      text-align: center;
+.box {
+  margin: 10px;
+  border: 1px solid grey;
+  padding: 20px 0px 20px 0px;
+  height: 300px;
+  border-radius: 10px;
+  margin: 20px;
+  background-color: #f5f8f9;
+  box-shadow: 0px 0px 2px 4px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
-.boxs-details{  
-    padding: 10px 10px 10px 10px;
+.box-head {
+  font-weight: 700;
+  text-align: center;
+}
+.boxs-details {
+  padding: 10px 10px 10px 10px;
 }
